docs(README): 更新插件说明文档
- 添加详细的插件功能介绍
- 补充安装方法和使用说明
- 说明配置文件格式和路径
- 附上开发说明和兼容性信息- 增加许可证和贡献指南

--- a/addons/rename_tool/config.cfg
+++ b/addons/rename_tool/config.cfg
@@ -4,3 +4,4 @@ dirs=PackedStringArray("res://assets/")
 extensions=PackedStringArray(".png", ".tscn", ".json", ".ttf")
 camel_case_regex=""
 separator_regex=""
+custom_regex_enabled=false
